--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-
+################################################### SERVER ########################################################################
+sever.port=8080
+################################################### JPA ############################################################################
+spring.datasource.url=jdbc:postgresql://localhost:5432/dimedical
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username= postgres
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
