--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ################################################### SERVER ########################################################################
 sever.port=8080
 ################################################### JPA ############################################################################
-spring.datasource.url=jdbc:postgresql://localhost:5432/dimedical
+spring.datasource.url=jdbc:postgresql://db:5432/dimedical
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username= postgres
 spring.datasource.password=admin
